[package]
name = "workers-core-rust"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
criterion = { version = "0.7.0" }

[[bench]]
name = "single_producer_multi_consumer_batch_item_bench"
harness = false

[[bench]]
name = "single_producer_multi_consumer_single_item_bench"
harness = false
[dependencies]
log = "0.4.28"